--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "haejunghan.github.io"
+url: 'https://haejunghan.github.io'
 
 github:
   username: HaejungHan # change to your GitHub username
@@ -91,10 +91,10 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: "https://chirpy-img.netlify.app"
+cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "mypicture.jpg"
+avatar: /assets/img/mypicture.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
